Fixed sub header text size on mobile

--- a/style-index.css
+++ b/style-index.css
@@ -685,6 +685,10 @@ section * {
         margin-right: 0;
     }
 
+    .hero-text p {
+        font-size: 1rem;
+    }
+
     .features-content {
         flex-direction: column;
     }
